force-app/main/default/objects/Referral__c/fields/Amount_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Pay__c</fullName>
    <label>Amount to Pay ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>