force-app/main/default/objects/Referral__c/fields/Certified_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Certified_Fee_Paid__c</fullName>
    <label>Certified Fee Paid ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>