force-app/main/default/objects/Referral__c/fields/Certified_Integration_Date__c.field-meta.xml
<CustomField>
    <fullName>Certified_Integration_Date__c</fullName>
    <label>Certified Integration Date</label>
    <type>Date</type>
</CustomField>