force-app/main/default/objects/Referral__c/fields/Compensation_Type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Type__c</fullName>
    <label>Compensation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>