force-app/main/default/objects/Referral__c/fields/Contract_Signed_For__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_For__c</fullName>
    <label>Contract Signed For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omnitracs US</fullName>
            </value>
            <value>
                <fullName>Roadnet</fullName>
            </value>
            <value>
                <fullName>XRS Corporated</fullName>
            </value>
            <value>
                <fullName>Sylectus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>