force-app/main/default/objects/Referral__c/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Co-Sell</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>