force-app/main/default/objects/Referral__c/fields/Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vehicles__c</fullName>
    <label>Number of Vehicles</label>
    <type>Date</type>
</CustomField>