force-app/main/default/objects/Referral__c/fields/Partner_Product_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Partner_Product_Service_Description__c</fullName>
    <label>Partner Product/Service Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>