force-app/main/default/objects/Referral__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Referral</fullName>
            </value>
            <value>
                <fullName>Buying Group &amp; Trade Association</fullName>
            </value>
            <value>
                <fullName>Consulting Group</fullName>
            </value>
            <value>
                <fullName>Certified Solution Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>