force-app/main/default/objects/Referral__c/fields/Pay_Refferal__c.field-meta.xml
<CustomField>
    <fullName>Pay_Refferal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay Refferal</label>
    <type>Checkbox</type>
</CustomField>