force-app/main/default/objects/Referral__c/fields/Product_Name_s_That_Are_Certified__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_s_That_Are_Certified__c</fullName>
    <label>Product Name(s) That Are Certified</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>