force-app/main/default/objects/Referral__c/fields/Recurring_Certification_Fee__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Certification_Fee__c</fullName>
    <inlineHelpText>Recurring Certification Fee, this is per vehicle/per month.</inlineHelpText>
    <label>Recurring Certification Fee ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>