force-app/main/default/objects/Referral__c/fields/Referral_Fee_Cap__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_Cap__c</fullName>
    <label>Referral Fee Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>