force-app/main/default/objects/Referral__c/fields/Referral_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_Percentage__c</fullName>
    <label>Referral Fee Percentage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5% - Lead Pass (RN)</fullName>
            </value>
            <value>
                <fullName>10% - Flat (XRS, Sylectus)</fullName>
            </value>
            <value>
                <fullName>15% - Co-Sell (RN)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>