force-app/main/default/objects/Referral__c/fields/Referral_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Referral_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>