force-app/main/default/objects/Referral__c/fields/Referred_By_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Referred By (Account))</relationshipLabel>
    <relationshipName>Referral1</relationshipName>
    <type>Lookup</type>
</CustomField>